# stitch

./: .cppcheck-suppressions  .gitignore  CMakeLists.txt  DESIGN.md  README.md  USAGE.md
.github/workflows/: ci.yml
src/: command_interpreter.cpp  command_interpreter.h  connection_handler.cpp  connection_handler.h  http_parser.cpp  http_parser.h  main.cpp  response_generator.cpp  response_generator.h  socket_manager.cpp  socket_manager.h
tests/: CMakeLists.txt  test_command_interpreter.cpp  test_connection_handler.cpp  test_http_parser.cpp  test_main.cpp  test_response_generator.cpp
